# waywallen-display-wayfire-focus

./: BUILD.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  release.xml
.github/workflows/: check.yml  package-release.yml  release-gnome-zip.yml  release-kde-zip.yml
examples/: minimal_egl.c  minimal_headless.c
examples/qml/: minimal.qml
extensions/gnome/: CMakeLists.txt
extensions/gnome/extension/: extension.js  gnomeShellOverride.js  launcher.js  metadata.json.in  prefs.js  wallpaper.js  windowManager.js  windowState.js
extensions/gnome/extension/schemas/: org.gnome.shell.extensions.waywallen.gschema.xml  org.waywallen.gnome.gschema.xml
extensions/gnome/renderer/: renderer.js
extensions/kde/: README.md
extensions/kde/package/: metadata.json
extensions/kde/package/contents/config/: main.xml
extensions/kde/package/contents/ui/: ImportTest.qml  ImportTestEmbed.qml  WaywallenSurface.qml  WaywallenSurfaceEmbed.qml  WindowModel.qml  config.qml  main.qml
include/: waywallen_display.h
plugins/gobject/: CMakeLists.txt  ww-display.c  ww-display.h  ww-shadow-paintable.c  ww-shadow-paintable.h
plugins/qml/: CMakeLists.txt  PluginInfo.hpp  WaywallenDisplay.cpp  WaywallenDisplay.hpp
scripts/: build_gnome_zip.sh  build_kde_embed.sh  changelog.py  format.sh
src/: backend_egl.c  backend_egl.h  backend_vulkan.c  backend_vulkan.h  backend_vulkan_blit.c  backend_vulkan_blit.h  codec.c  codec.h  display.c  drm_fourcc_internal.h  lib.rs  log_internal.h
tests/: test_backend_egl.c  test_codec.c  test_display.c
